# Rust-Game-Engine

./: Cargo.toml  README.md  run.bash
src/: main.rs
src/engine/: game.rs  input.rs  lib.rs
src/engine/assets/: asset_manager.rs  mod.rs  resources.rs
src/engine/components/: camera.rs  light.rs  mod.rs  model_renderer.rs  sprite.rs  transform.rs
src/engine/graphics/: mod.rs  renderer.rs
src/engine/graphics/shaders/: debug_icon.wgsl  ui_element.wgsl  universal.wgsl
src/engine/graphics/shared/: camera.rs  instance.rs  material.rs  mesh.rs  mod.rs  model.rs  texture.rs  vertex.rs
src/engine/graphics/util/: color.rs  graphics_bundle.rs  graphics_settings.rs  mesh_primitives.rs  mod.rs  render_pipeline.rs
src/engine/systems/: camera_controller.rs  mod.rs
